# botto

./: .dockerignore  .example-env  .gitignore  .surrealdb  Cargo.toml  LICENSE  README.md  docker-compose.yaml  dockerfile  dockerfile_surrealdb_non_root
.github/workflows/: ci.yaml
db_data/setup/migrations/: 20240911_234427_init.surql
db_data/setup/migrations/definitions/: _initial.json
db_data/setup/migrations/down/: 20240911_234427_init.surql
src/: main.rs  matrix.rs  prelude.rs
src/command/: choose.rs  coin.rs  conch.rs  help.rs  mod.rs  nominate.rs  reminder.rs  roll.rs  rps.rs
