[package]
name = "botto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
dotenv = "0.15.0"
matrix-sdk = "0.7.1"
mime = "0.3.17"
rand = "0.8.5"
regex = "1.10.6"
serde = "1.0.210"
serde_json = "1.0.128"
surrealdb = "1.5.5"
surrealdb-migrations = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
env_logger = "*"
test-log = { version = "0.2", features = ["trace"] }
