[package]
name = "botto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
matrix-sdk = { version = "0.7.1", features = ["e2e-encryption"] }
mime = "0.3"
rand = "0.8"
regex = "1.10"
serde = "1.0"
serde_json = "1.0"
surrealdb = { version = "1.5", features = [] }
surrealdb-migrations = "1.5"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = "*"
test-log = { version = "0.2", features = ["trace"] }
